--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "codemirror": "^5.55.0",
+    "sweetalert2": "^9.15.2",
     "tailwindcss": "^1.4.6",
     "v-clipboard": "^2.2.3",
     "vue-clipboard2": "^0.3.1",
