Fix pagination, component user name, rating display, choosing frameworks on chrome

--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "codemirror": "^5.55.0",
+    "laravel-vue-pagination": "^2.3.1",
     "sweetalert2": "^9.15.2",
     "tailwindcss": "^1.4.6",
     "v-clipboard": "^2.2.3",
     "vue-clipboard2": "^0.3.1",
     "vue-html2canvas": "0.0.4",
+    "vue-resource": "^1.5.1",
     "vue-unique-id": "^3.1.0"
   }
 }
